# testudo

./: .gitignore  README.md  SEMANTIC_SEARCH_PLAN.md  SEMANTIC_SEARCH_README.md  app.py  build_site.py  cli.py  courses_202501.csv  csv_to_db.py  generate_embeddings.py  generate_embeddings_llm.py  generate_embeddings_tfidf.py  json2csv.py  json_to_sqlite.py  json_to_sqlite_fall.py  load_specific_terms.py  migrate_to_vec.py  pyproject.toml  semantic_search.py  setup_db.py  test_syllabus.py  test_syllabus_extractor.py  testudo.py
docs/: index.html
docs/data/: longstanding.json  meta.json  new_courses.json  overview.json  seasonal.json  special_topics.json  turnover.json
docs/data/departments/: AAAS.json  AAPS.json  AASP.json  AAST.json  ABRM.json  AGNR.json  AGST.json  AMSC.json  AMST.json  ANSC.json  ANTH.json  AOSC.json  ARAB.json  ARCH.json  AREC.json  ARHU.json  ARMY.json  ARSC.json  ARTH.json  ARTT.json  ASTR.json  BCHM.json  BDBA.json  BEES.json  BIOE.json  BIOI.json  BIOL.json  BIOM.json  BIPH.json  BISI.json  BMGT.json  BMIN.json  BMSO.json  BOIS.json  BSCI.json  BSCV.json  BSGC.json  BSOS.json  BSST.json  BUAC.json  (+194 more)
docs/data/heatmap/: 201712.json  201801.json  201805.json  201808.json  201905.json  201908.json  201912.json  (+28 more)
docs/plans/: 2026-06-23-parallel-scraper-design.md  2026-06-23-parallel-scraper.md
static/: index.html
tests/: test_cli_args.py  test_parallel_scrape.py  test_parser_throttle.py  test_rate_limiter.py  test_testudo.py
testudo/: __init__.py  config.py  models.py  parser.py  rate_limiter.py  scraper.py  syllabus_extractor.py  utils.py
(+15415 files in other folders)
