[project]
name = "testudo"
version = "1.0.0"
description = "University of Maryland course scraper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lxml-html-clean>=0.4.2",
    "requests-html>=0.10.0",
    "sqlite-utils>=3.37.0",
]
authors = [
    {name = "Derek Willis", email = "dwillis@umd.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
testudo = "cli:main"

[project.urls]
Homepage = "https://github.com/dwillis/testudo"
Repository = "https://github.com/dwillis/testudo"
Issues = "https://github.com/dwillis/testudo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
